syntax = "proto3";

package security;

option go_package = "./security";

// The Zero Trust Security Service definition.
service SecurityService {
  // IssueMTLSCertificate issues a new mTLS certificate for a service.
  rpc IssueMTLSCertificate (CertRequest) returns (CertResponse);
  // RevokeMTLSCertificate revokes an existing mTLS certificate.
  rpc RevokeMTLSCertificate (CertRequest) returns (CertResponse);
}

// Request message for certificate operations.
message CertRequest {
  string service_name = 1;
  string common_name = 2;
}

// Response message for certificate operations.
message CertResponse {
  bool success = 1;
  string message = 2;
  // Base64 encoded certificate and key (only for IssueMTLSCertificate)
  string certificate_pem = 3; 
  string private_key_pem = 4;
}
